Build out session detail pages and index
Fixes #2

--- a/index.html
+++ b/index.html
@@ -44,17 +44,4 @@ layout: default
   </section>
 </div>
 
-<div class="content-section-header">
-  <a name="location">Location</a>
-</div>
-
-<div class="wrapper">
-  <section class="content-section">
-    {% capture location %}
-      {%- include location.md %}
-    {% endcapture %}
-    {{ location | markdownify }}
-  </section>
-</div>
-<iframe width="100%" height="450" frameborder="0" style="border:0"
-src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJF46nztF4bIcRp71C4_p-sn4&key=AIzaSyAlRyNJifvgv8T2QFhiHG9ZgwQ1P7So8AM" allowfullscreen></iframe>
+{% include location.html description=true %}
