Set up separate “About SI” section in the footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
       {%- include intro.md %}
     {% endcapture %}
     {{ intro | markdownify }}
-    {% include mailchimp.html %}
+    {% include mailchimp-ts.html %}
   </section>
 </div>
 
