First pass at conversion for Summer 2018 event

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="wrapper">
   <section class="content-section intro">
+    {% include intro-images.html %}
     {% capture intro %}
       {%- include intro.md %}
     {% endcapture %}
