Rename the `art` anchor to `artists`

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 </div>
 
 <div class="content-section-header">
-  <a name="art">Artists</a>
+  <a name="artists">Artists</a>
 </div>
 <div class="wrapper">
   <section class="content-section">
