--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <section class="content-section intro">
     {% include intro-images.html %}
     {% capture intro %}
-      {%- include_relative fragments/intro.md %}
+      {%- include intro.md %}
     {% endcapture %}
     {{ intro | markdownify }}
     {% include mailchimp-ts.html %}
@@ -29,7 +29,7 @@ layout: default
 <div class="wrapper">
   <section class="content-section">
     {% capture talks %}
-      {%- include_relative fragments/talks.md %}
+      {%- include talks.md %}
     {% endcapture %}
     {{ talks | markdownify }}
   </section>
@@ -40,7 +40,8 @@ layout: default
 </div>
 <div class="wrapper">
   <section class="content-section">
-    {% include_relative fragments/artists.html %}
+
+    {% include artists.html %}
   </section>
 </div>
 
